Fixed small styling issues (#2941)
* Fixed SafeT text overlapped by unlock button

* Fixed some styling issues with ViewOnly

--- a/common/v2/components/WalletUnlock/ViewOnly.scss
+++ b/common/v2/components/WalletUnlock/ViewOnly.scss
@@ -5,7 +5,6 @@
   height: 600px;
 
   @media (max-width: 700px) {
-    width: 375px;
     height: 450px;
     padding: 1em; 
   }
@@ -21,11 +20,7 @@
   &-submit {
     position: relative;
     bottom: -4em;
-    width: 420px;
-
-    @media (max-width: 700px) {
-      width:345px;
-    }
+    width: 100%;
   }
   &-fields {
     display: flex;
